# CS311

./: Gemfile  _config.yml  link.md  readMe.md  syllabus.org
_announcements/: 2019-08-26-description.md  2021-10-19-homework-hsla.md  2021-10-26-homework-hsla.md  2021-10-27-homework-layouts.md  2021-11-20-homework-mainApplication.md  2021-11-28-To_do_application.md  2021-12-24-FinalProjectGroups.md
_data/: lectures.yml  staff.yml
_includes/: footer.html
_layouts/: distill.html  schedule.html
_pages/: about.md  calendar.md  homework.md  lectures.md  logistics.md
_site/: Gemfile  index.html
_site/calendar/: index.html
_site/homework/: index.html
_site/lectures/: index.html
_site/logistics/: index.html
_site/overview/: index.html
_site/tutorials/zetcode/03_first_app/: CMakeLists.txt  plus_minus.h
assets/bibliography/: course_overview.bib  readme.md
assets/code/lecture1/containers/: CMakeLists.txt  lists.cpp  vectors.cpp
assets/code/lecture1/strings/: 01_append_prepend.cpp  02_build_string.cpp  CMakeLists.txt
css/: main.css
homeworks/: grades.csv
homeworks/01_feet_wet/: 01_course_intro.md
homeworks/02_hsla_images/: hsla_images.md  images_diagram.dot
homeworks/03_shapes/: model.dot  shapes.md
homeworks/04_forms/: forms.md
homeworks/05_signals/: calculator_keyboard.md
homeworks/06_designer/: designer.md
homeworks/07_spreadsheet/: spreadsheet.md
lectures/: course_overview.md  inheritance.md  intro_qt.md  main_windows.md  modelViewControl.md  painting.md  polymorphism.md  qt_designer_dialogs.md  signals_slots.md  widgets_zology_01.md
tutorials/zetcode/: readMe.md
(+31 files in other folders)
